# proyecto-integrador-semestre-2

./: .env.template  .gitignore  Pipfile  README.md  app.py  calculate_rows_per_category.py  emr-sample-access-policy.json  emr-serverless-trust-policy.json  get_sample.py  main.py  pyproject.toml  recommender.py  upload_files.ipynb
data/: counts_per_category.csv
data/prediction_sentiment_results/: metrics.parquet  metrics_test.parquet
data/time_series/: test_df.parquet  train_df.parquet  validation_df.parquet
eda/: eda.ipynb
notebooks/: eda.ipynb  exp_recommender.ipynb  get_weights.ipynb  recommender.ipynb  recommender_random_stratified_split.ipynb  recommender_stratified_split.ipynb  sentiment_analysis.ipynb  sentiment_analysis_baseline.ipynb  sentiment_analysis_fine_tuning.ipynb  sentiment_analysisi_fine_tuning.ipynb  time_series_analysis.ipynb  upload_files.ipynb
notebooks/time_series/: chronos.ipynb  utils.py
notebooks/time_series/arima/: arima.ipynb  arima.py  auto_arima_enfoque_academico_practico.ipynb  auto_sarima_enfoque_academico_practico.ipynb  auto_sarima_enfoque_practico.ipynb  backtesting_sarima.ipynb  naive.ipynb  predicciones.ipynb
notebooks/time_series/lstm/: input_data.py  lstm.ipynb  lstm.py  time_series_dataset.py  trainer.py
notebooks/time_series/random_forest/: random_forest.ipynb
scripts/: calculate_rows_per_category.py  data_cleaning.py  eda.py  get_reviews_count_distribution.py  get_sample.py  get_sample_for_demo.py  get_sample_for_model.py  get_time_series_data.py  recommender.py  recommender_random_split.py  recommender_random_stratified_split.py  recommender_stratified_split.py  total_rows_per_category.py  validation.py
