[project]
name = "proyecto-integrador-semestre-2"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "David Armendariz", email = "david.adrian.a.p@gmail.com"},
]
dependencies = [
    "pandas>=2.2.2",
    "boto3>=1.34.99",
    "ydata-profiling>=4.7.0",
    "plotly>=5.22.0",
    "pyspark>=3.5.1",
    "notebook>=7.1.3",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
