[project]
name = "proyecto-integrador-semestre-2"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "David Armendariz", email = "david.adrian.a.p@gmail.com"},
]
dependencies = [
    "pandas>=2.2.2",
    "boto3>=1.34.99",
    "ydata-profiling>=4.7.0",
    "plotly>=5.22.0",
    "pyspark>=3.5.1",
    "notebook>=7.1.3",
    "python-dotenv>=1.0.1",
    "transformers>=4.40.2",
    "evaluate>=0.4.2",
    "datasets>=2.19.1",
    "awswrangler>=3.7.3",
    "ipywidgets>=8.1.2",
    "torch>=2.3.0",
    "numpy>=1.26.4",
    "scikit-learn>=1.4.2",
    "accelerate>=0.30.0",
    "streamlit>=1.34.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
